--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "axios": "^1.6.8",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "jwt-encode": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
