--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "jwt-encode": "^1.0.1",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.13.0",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
+    "react-drag-reorder": "^1.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
